2014-07-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-basic-type): Validate value after
	encoding.
	(soap-decode-xs-basic-type): Validate value before decoding.

2014-07-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-validate-xs-basic-type): New function.
	(soap-validate-xs-simple-type): Call soap-validate-xs-basic-type.

2014-06-29  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-add-union): Append result to base
	instead of overwriting it.
	(soap-validate-xs-simple-type): Add union support.

2014-06-21  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-add-restriction): Translate pattern to
	Emacs regexp using xsdre-translate.
	(soap-validate-xs-simple-type): Validate value against pattern.

2014-06-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-add-union): Preserve WSDL order of
	inline simpleType nodes.
	(soap-decode-type): Handle union types.

2014-05-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-attributes): Decode basic-type
	attributes.

2014-05-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-get-xs-attributes-from-groups): renamed
	from soap-xs-attribute-group-consolidate, all callers updated
	(soap-get-xs-attributes): renamed from
	soap-xs-attributes-consolidate, all callers updated

2014-05-21  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-type): Add attribute-group slot.
	(soap-xs-attribute-group): New type.
	(soap-xs-parse-attribute-group): New function.
	(soap-resolve-references-for-xs-attribute-group): Likewise.
	(soap-xs-add-extension): Handle attribute groups.
	(soap-resolve-references-for-xs-simple-type): Likewise.
	(soap-xs-parse-complex-type): Likewise.
	(soap-xs-parse-extension-or-restriction): Likewise.
	(soap-resolve-references-for-xs-complex-type): Likewise.
	(soap-xs-attribute-group-consolidate): New function.